Change file search location

--- a/Register.html
+++ b/Register.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' media='screen' href='/CSS/Register.css'>
-    <script src='/Javascript/Register.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='CSS/Register.css'>
+    <script src='Javascript/Register.js'></script>
     <title>Register</title>
 </head>
 <body>
     <div class="Header">
         <div class="Logo_Section" onclick="Home_Function()">
-            <img id="Logo_Image" src="/Images/Homepage-Logo.png" alt="Homepage-Logo">
+            <img id="Logo_Image" src="Images/Homepage-Logo.png" alt="Homepage-Logo">
             <h1 id="Logo_Text">Food Paradise</h1>
         </div>
 
@@ -25,7 +25,7 @@
     <div class="Register_Forum">       
         <div class="Register_Form">
             <div class="Register_Forum_Header">
-                <img id="Logo" src="/Images/Homepage-Logo-w-BG.png" alt="Logo">
+                <img id="Logo" src="Images/Homepage-Logo-w-BG.png" alt="Logo">
                 <div class="Register">
                     <h1 id="Register_Text">Register</h1>
                 </div>
@@ -33,17 +33,17 @@
 
             <form class="Register_Form" name="myRegister" id="myRegister">
                 <div class="Enter_Email">
-                    <span><img src="/Images/Name_Icon.png" alt="Name_Icon" id="Name_Icon_Image"></span>
+                    <span><img src="Images/Name_Icon.png" alt="Name_Icon" id="Name_Icon_Image"></span>
                     <input type="text" placeholder="Enter Email" id="Enter_Email_Text" required autofocus>
                 </div>
 
                 <div class="Enter_Password">
-                    <span><img src="/Images/Password_Icon.png" alt="Password_Icon" id="Password_Icon_Image"></span>
+                    <span><img src="Images/Password_Icon.png" alt="Password_Icon" id="Password_Icon_Image"></span>
                     <input type="password" placeholder="Enter Password" id="Enter_Password_Text" required>
                 </div>
 
                 <div class="Enter_Confirm_Password">
-                    <span><img src="/Images/Comfirm_Password_Icon.png" alt="Confirm_Password_Icon" id="Confirm_Password_Icon_Image"></span>
+                    <span><img src="Images/Comfirm_Password_Icon.png" alt="Confirm_Password_Icon" id="Confirm_Password_Icon_Image"></span>
                     <input type="password" placeholder="Confirm Password" id="Enter_Confirm_Password_Text" required>
                 </div>
                 
