--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' media='screen' href='/CSS/Homepage.css'>
-    <script src='/Javascript/Homepage.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='CSS/Homepage.css'>
+    <script src='Javascript/Homepage.js'></script>
     <title>Food Paradise</title>
 </head>
 <body>
     <div class="Header">
         <div class="Logo_Section" onclick="Home_Function()">
-            <img id="Logo_Image" src="/Images/Homepage-Logo.png" alt="Homepage-Logo">
+            <img id="Logo_Image" src="Images/Homepage-Logo.png" alt="Homepage-Logo">
             <h1 id="Logo_Text">Food Paradise</h1>
         </div>
 
@@ -22,7 +22,7 @@
         </div>
 
         <div class="Login_Section">
-            <img id="Login_Logo" src="/Images/Login_Logo.png" alt="Login_Logo">
+            <img id="Login_Logo" src="Images/Login_Logo.png" alt="Login_Logo">
             <h1 id="Login_Text" onclick="Login_Function()">Sign in</h1>
         </div>
     </div>
