Add Shopping Page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="Header_Headline">
             <h1 id="Home_Button" onclick="Home_Function()">Home</h1>
-            <h1 id="Shopping_Page_Button">Shopping Page</h1>
+            <h1 id="Shopping_Page_Button" onclick="Shopping_Page_Function()">Shopping Page</h1>
             <h1>Contact: 012-234-4567</h1>
         </div>
 
