Done Shopping Page

--- a/Shopping_Page.html
+++ b/Shopping_Page.html
@@ -20,20 +20,20 @@
                 <div id="slot1"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">20</h4>
+                <h4 id="Price_Text0">20</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
 
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart0">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text0">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
 
         <div class="Goods" data-name="g2">
@@ -42,20 +42,20 @@
                 <div id="slot2"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">10</h4>
+                <h4 id="Price_Text1">10</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
             
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart1">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text1">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
 
         <div class="Goods" data-name="g3"> 
@@ -64,20 +64,20 @@
                 <div id="slot3"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">80</h4>
+                <h4 id="Price_Text2">80</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
 
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart2">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text2">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
 
         <div class="Goods" data-name="g4">
@@ -86,20 +86,20 @@
                 <div id="slot4"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">50</h4>
+                <h4 id="Price_Text3">50</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
 
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart3">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text3">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
 
         <div class="Goods" data-name="g5">
@@ -108,20 +108,20 @@
                 <div id="slot5"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">100</h4>
+                <h4 id="Price_Text4">100</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
 
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart4">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text4">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
 
         <div class="Goods" data-name="g6">
@@ -130,20 +130,20 @@
                 <div id="slot6"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">70</h4>
+                <h4 id="Price_Text5">70</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
 
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart5">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text5">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
 
         <div class="Goods" data-name="g7">
@@ -152,20 +152,20 @@
                 <div id="slot7"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">70</h4>
+                <h4 id="Price_Text6">70</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
 
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart6">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text6">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
 
         <div class="Goods" data-name="g8">
@@ -174,20 +174,20 @@
                 <div id="slot8"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">50</h4>
+                <h4 id="Price_Text7">50</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
 
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart7">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text7">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
 
         <div class="Goods" data-name="g9">
@@ -196,20 +196,20 @@
                 <div id="slot9"></div>
             </div>
             <div class="Price_of_Product">
-                <h4 id="Price_Text">10</h4>
+                <h4 id="Price_Text8">10</h4>
                 <h4 id="Price_Currency">Baht</h4>
             </div>
 
             <div class="Button_Section">
-                <img src="/Images/Double_Arrow_Left.png" alt="Arrow_Left" id="Arrow_Left">
-                <input type="number" placeholder="0" id="Amount_in_Cart">
-                <img src="/Images/Double_Arrow_Right.png" alt="Arrow_Right" id="Arrow_Right">
+                <input type="number" placeholder="0" id="Amount_in_Cart8">
             </div>
 
             <div class="Total">
-                <h4 id="Total_Text">0</h4>
+                <h4 id="Total_Text8">0</h4>
                 <h4 id="Currency">Baht</h4>
             </div>
+
+            <button id="Calculate_Button" onclick="Calculate_Price()">Calculate</button>
         </div>
     </div>
 
@@ -219,23 +219,23 @@
             <h1 id="Cart_Header">Cart:</h1>
             <div class="Cart_Subtotal">
                 <p>Subtotal:</p>
-                <p>0</p>
+                <p id="Cart_Subtotal_Number">0</p>
             </div>
             <hr>
             <div class="Cart_Tax">
                 <p>Tax(7%):</p>
-                <p>0</p>
+                <p id="Cart_Tax_Number">0</p>
             </div>
             <hr>
             <div class="Cart_Total">
                 <p>Total:</p>
-                <p>0</p>
+                <p id="Cart_Total_Number">0</p>
             </div>
         </div>
 
         <div class="Cart_Checkout">
-            <button id="Checkout_Button">Checkout</button>
-            <button id="Clear_Cart_Button">Clear Cart</button>
+            <button id="Checkout_Button" onclick="Checkout()">Checkout</button>
+            <button id="Clear_Cart_Button" onclick="Clear_Cart()">Clear Cart</button>
         </div>
 
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
